--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-02" />
+<meta name="date" content="2025-06-13" />
 
-<title>Data Cleaning Step 7- Curate final metadataset of specimens from index subjects</title>
+<title>Data Cleaning Step 7 - Curate final metadataset of specimens from index subjects</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,10 +350,10 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Data Cleaning Step 7- Curate final
+<h1 class="title toc-ignore">Data Cleaning Step 7 - Curate final
 metadataset of specimens from index subjects</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-02</h4>
+<h4 class="date">2025-06-13</h4>
 
 </div>
 
@@ -418,6 +418,9 @@ loaded via a namespace (and not attached):
 [25] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
 [29] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
 [33] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
+</div>
+<div id="update---changed-from-30-to-25-snp-threshold" class="section level1">
+<h1>Update - changed from 30 to 25 SNP threshold</h1>
 <pre class="r"><code>df &lt;- readRDS(&quot;/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS&quot;)
 df_qc_passing &lt;-  df %&gt;% subset(qc_pass==&quot;TRUE&quot; &amp; WGS_escre==TRUE)
 df_index &lt;- subset(df_qc_passing, index==TRUE)</code></pre>
