--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.html
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-28" />
+<meta name="date" content="2025-06-13" />
 
 <title>Supplemental Table 1: Location of ESBL genes on short-read assemblies</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 1: Location of ESBL
 genes on short-read assemblies</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-28</h4>
+<h4 class="date">2025-06-13</h4>
 
 </div>
 
@@ -652,6 +652,9 @@ loaded via a namespace (and not attached):
 </div>
 <div id="esbl-gene-frequency-on-plasmids" class="section level1">
 <h1>ESBL gene frequency on plasmids</h1>
+<div id="used-the-following-families-ctx-oxa-tem-shv-per-veb-ges-tla-bes" class="section level2">
+<h2>Used the following families: CTX, OXA, TEM, SHV, PER, VEB, GES, TLA,
+BES</h2>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
 <thead>
 <tr>
@@ -882,6 +885,7 @@ blaTEM-1
 </tr>
 </tbody>
 </table>
+</div>
 </div>
 
 
