--- a/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
+++ b/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-28" />
+<meta name="date" content="2025-06-13" />
 
 <title>Supplemental Table 2: Strain and ESBL gene presence stratified by household</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 2: Strain and ESBL gene
 presence stratified by household</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-28</h4>
+<h4 class="date">2025-06-13</h4>
 
 </div>
 
@@ -652,6 +652,9 @@ loaded via a namespace (and not attached):
 </div>
 <div id="supplemental-table-2" class="section level1">
 <h1>Supplemental Table 2</h1>
+<div id="note-updated-to-use-25-snp-threshold-not-30-due-to-epidemiological-data" class="section level2">
+<h2>Note: Updated to use 25 SNP threshold not 30 due to epidemiological
+data</h2>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
 <thead>
 <tr>
@@ -1345,7 +1348,7 @@ blaSHV-187
 1
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 3
 </td>
 <td style="text-align:left;">
 AA337, novel_5d1ea3302989a0609d13de4e98b5b1aa
@@ -1371,7 +1374,7 @@ AA337
 2
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 3
 </td>
 <td style="text-align:left;">
 AA337, novel_f6308afd395808e70ab8ea14046ca670
@@ -1397,7 +1400,7 @@ AA337
 3
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 3
 </td>
 <td style="text-align:left;">
 AA315, AA352
@@ -1423,7 +1426,7 @@ AA315
 0
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 2
+Escherichia coli ST 131 Cluster 1
 </td>
 <td style="text-align:left;">
 AA171, AA172, AA579, AB687, AC748
@@ -1448,7 +1451,7 @@ blaCTX-M-15
 2
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 10
+Escherichia coli ST 131 Cluster 11
 </td>
 <td style="text-align:left;">
 AA324
@@ -1473,7 +1476,7 @@ AA324
 3
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 10
+Escherichia coli ST 131 Cluster 11
 </td>
 <td style="text-align:left;">
 AA173, AA324
@@ -1540,7 +1543,7 @@ Citrobacter portucalensis ST 13 Singleton
 0
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 2
+Escherichia coli ST 131 Cluster 1
 </td>
 <td style="text-align:left;">
 AA171, AA579, AC748
@@ -1565,7 +1568,7 @@ blaCTX-M-15
 1
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 2
+Escherichia coli ST 131 Cluster 1
 </td>
 <td style="text-align:left;">
 AA190, AA336, AA579, AB687, AC512, AC748
@@ -1590,7 +1593,7 @@ blaCTX-M-15
 2
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 2
+Escherichia coli ST 131 Cluster 1
 </td>
 <td style="text-align:left;">
 AA336, AA579, AC512, AC748
@@ -1615,7 +1618,7 @@ blaCTX-M-15
 3
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 2
+Escherichia coli ST 131 Cluster 1
 </td>
 <td style="text-align:left;">
 AA190, AA336, AA579, AC512, AC748
@@ -1787,7 +1790,7 @@ Proteus mirabilis ST Unknown Singleton
 0
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 9
+Escherichia coli ST 131 Cluster 10
 </td>
 <td style="text-align:left;">
 AA282, AA324
@@ -1812,7 +1815,7 @@ AA324
 1
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 9
+Escherichia coli ST 131 Cluster 10
 </td>
 <td style="text-align:left;">
 AA282, AA324
@@ -1837,7 +1840,7 @@ AA324
 2
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 9
+Escherichia coli ST 131 Cluster 10
 </td>
 <td style="text-align:left;">
 AA282, AA324, AA552
@@ -1984,7 +1987,7 @@ AA327
 0
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 3
+Escherichia coli ST 131 Cluster 2
 </td>
 <td style="text-align:left;">
 AA171, AA977, AB685
@@ -2009,7 +2012,7 @@ AA171
 1
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 3
+Escherichia coli ST 131 Cluster 2
 </td>
 <td style="text-align:left;">
 AA171, AA977, AB685
@@ -2034,7 +2037,7 @@ AA171
 2
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 3
+Escherichia coli ST 131 Cluster 2
 </td>
 <td style="text-align:left;">
 AA171, AA977, AB685
@@ -2059,7 +2062,7 @@ AA171
 3
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 3
+Escherichia coli ST 131 Cluster 2
 </td>
 <td style="text-align:left;">
 AA171, AA977, AB685
@@ -2488,7 +2491,7 @@ AA424
 0
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 8
 </td>
 <td style="text-align:left;">
 AA337
@@ -2514,7 +2517,7 @@ AA337
 1
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 8
 </td>
 <td style="text-align:left;">
 AA337
@@ -2540,7 +2543,7 @@ AA337
 2
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 8
 </td>
 <td style="text-align:left;">
 AA337
@@ -2566,7 +2569,7 @@ AA337
 3
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 131 Cluster 1
+Escherichia coli ST 131 Cluster 8
 </td>
 <td style="text-align:left;">
 AA002, AA337, novel_6d376b67d5de7de7561485045887729d
@@ -3138,6 +3141,7 @@ AA735
 </tr>
 </tbody>
 </table>
+</div>
 </div>
 
 
