--- a/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
+++ b/scripts/prolonged_colonization/prolonged_colonization_index_patients.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-13" />
+<meta name="date" content="2025-06-30" />
 
 <title>Prolonged colonization</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-13</h4>
+<h4 class="date">2025-06-30</h4>
 
 </div>
 
@@ -360,7 +360,7 @@ display: none;
 <div id="environment" class="section level1">
 <h1>Environment</h1>
 <pre class="r"><code>#Packages
-packages &lt;- c(&quot;tidyverse&quot;,&#39;ape&#39;,&#39;kableExtra&#39;,&#39;phytools&#39;,&#39;igraph&#39;,&#39;ggraph&#39;,&#39;tableone&#39;,&#39;kableExtra&#39;,&#39;ComplexHeatmap&#39;,&#39;gontjesr&#39;) 
+packages &lt;- c(&quot;tidyverse&quot;,&#39;kableExtra&#39;,&#39;gontjesr&#39;) 
 
 #Load Packages
 invisible(lapply(packages,library,character.only=T,quietly=T))
@@ -385,7 +385,7 @@ Sys.info()</code></pre>
                                                                                      effective_user 
                                                                                          &quot;kgontjes&quot; </code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>R version 4.5.0 (2025-04-11)
+<pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
 Running under: macOS Sequoia 15.5
 
@@ -400,49 +400,25 @@ time zone: America/Detroit
 tzcode source: internal
 
 attached base packages:
-[1] grid      stats     graphics  grDevices utils     datasets  methods  
-[8] base     
+[1] stats     graphics  grDevices utils     datasets  methods   base     
 
 other attached packages:
- [1] gontjesr_0.1.0        ComplexHeatmap_2.24.0 tableone_0.13.2      
- [4] ggraph_2.2.1          igraph_2.1.4          phytools_2.4-4       
- [7] maps_3.4.3            kableExtra_1.4.0      ape_5.8-1            
-[10] lubridate_1.9.4       forcats_1.0.0         stringr_1.5.1        
-[13] dplyr_1.1.4           purrr_1.0.4           readr_2.1.5          
-[16] tidyr_1.3.1           tibble_3.2.1          ggplot2_3.5.2        
-[19] tidyverse_2.0.0       knitr_1.50           
+ [1] gontjesr_0.1.0   kableExtra_1.4.0 lubridate_1.9.4  forcats_1.0.0   
+ [5] stringr_1.5.1    dplyr_1.1.4      purrr_1.0.4      readr_2.1.5     
+ [9] tidyr_1.3.1      tibble_3.2.1     ggplot2_3.5.2    tidyverse_2.0.0 
+[13] knitr_1.50      
 
 loaded via a namespace (and not attached):
- [1] DBI_1.2.3               mnormt_2.1.1            gridExtra_2.3          
- [4] phangorn_2.12.1         rlang_1.1.6             magrittr_2.0.3         
- [7] clue_0.3-66             GetoptLong_1.0.5        matrixStats_1.5.0      
-[10] compiler_4.5.0          png_0.1-8               systemfonts_1.2.2      
-[13] vctrs_0.6.5             combinat_0.0-8          quadprog_1.5-8         
-[16] pkgconfig_2.0.3         shape_1.4.6.1           crayon_1.5.3           
-[19] fastmap_1.2.0           rmarkdown_2.29          tzdb_0.5.0             
-[22] xfun_0.52               cachem_1.1.0            clusterGeneration_1.3.8
-[25] jsonlite_2.0.0          tweenr_2.0.3            cluster_2.1.8.1        
-[28] parallel_4.5.0          R6_2.6.1                bslib_0.9.0            
-[31] stringi_1.8.7           RColorBrewer_1.1-3      jquerylib_0.1.4        
-[34] numDeriv_2016.8-1.1     Rcpp_1.0.14             iterators_1.0.14       
-[37] optimParallel_1.0-2     IRanges_2.42.0          Matrix_1.7-3           
-[40] splines_4.5.0           timechange_0.3.0        tidyselect_1.2.1       
-[43] rstudioapi_0.17.1       yaml_2.3.10             viridis_0.6.5          
-[46] doParallel_1.0.17       codetools_0.2-20        lattice_0.22-7         
-[49] withr_3.0.2             coda_0.19-4.1           evaluate_1.0.3         
-[52] survival_3.8-3          survey_4.4-2            polyclip_1.10-7        
-[55] xml2_1.3.8              circlize_0.4.16         pillar_1.10.2          
-[58] foreach_1.5.2           stats4_4.5.0            generics_0.1.4         
-[61] hms_1.1.3               S4Vectors_0.46.0        scales_1.4.0           
-[64] glue_1.8.0              scatterplot3d_0.3-44    tools_4.5.0            
-[67] graphlayouts_1.2.2      fastmatch_1.1-6         tidygraph_1.3.1        
-[70] mitools_2.4             colorspace_2.1-1        nlme_3.1-168           
-[73] ggforce_0.4.2           cli_3.6.5               DEoptim_2.2-8          
-[76] expm_1.0-0              viridisLite_0.4.2       svglite_2.1.3          
-[79] gtable_0.3.6            sass_0.4.10             digest_0.6.37          
-[82] BiocGenerics_0.54.0     ggrepel_0.9.6           rjson_0.2.23           
-[85] farver_2.1.2            memoise_2.0.1           htmltools_0.5.8.1      
-[88] lifecycle_1.0.4         GlobalOptions_0.1.2     MASS_7.3-65            </code></pre>
+ [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.1     tidyselect_1.2.1  
+ [5] xml2_1.3.8         jquerylib_0.1.4    systemfonts_1.2.2  scales_1.4.0      
+ [9] yaml_2.3.10        fastmap_1.2.0      R6_2.6.1           generics_0.1.4    
+[13] svglite_2.1.3      bslib_0.9.0        pillar_1.10.2      RColorBrewer_1.1-3
+[17] tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0       stringi_1.8.7     
+[21] xfun_0.52          sass_0.4.10        viridisLite_0.4.2  timechange_0.3.0  
+[25] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
+[29] grid_4.5.1         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+[33] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
+[37] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
