--- a/scripts/results_sections/results_section_2_prolonged_colonization_data.html
+++ b/scripts/results_sections/results_section_2_prolonged_colonization_data.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-13" />
+<meta name="date" content="2025-06-30" />
 
 <title>Results Section 2: Discrimination of prolonged colonization using WGS</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 2: Discrimination of
 prolonged colonization using WGS</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-13</h4>
+<h4 class="date">2025-06-30</h4>
 
 </div>
 
@@ -613,7 +613,7 @@ Sys.info()</code></pre>
                                                                                      effective_user 
                                                                                          &quot;kgontjes&quot; </code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>R version 4.5.0 (2025-04-11)
+<pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
 Running under: macOS Sequoia 15.5
 
@@ -637,16 +637,16 @@ other attached packages:
 [13] knitr_1.50      
 
 loaded via a namespace (and not attached):
- [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
+ [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.1     tidyselect_1.2.1  
  [5] xml2_1.3.8         jquerylib_0.1.4    systemfonts_1.2.2  scales_1.4.0      
  [9] yaml_2.3.10        fastmap_1.2.0      R6_2.6.1           generics_0.1.4    
 [13] svglite_2.1.3      bslib_0.9.0        pillar_1.10.2      RColorBrewer_1.1-3
 [17] tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0       stringi_1.8.7     
 [21] xfun_0.52          sass_0.4.10        viridisLite_0.4.2  timechange_0.3.0  
 [25] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
-[29] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+[29] grid_4.5.1         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
 [33] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
-[37] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
+[37] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
@@ -713,7 +713,18 @@ Species + ST + Cluster (Strain)
 </tr>
 <tr>
 <td style="text-align:left;">
-ESBL gene
+ESCrE gene
+</td>
+<td style="text-align:right;">
+20
+</td>
+<td style="text-align:right;">
+0.6451613
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Plasmidic ESCrE
 </td>
 <td style="text-align:right;">
 16
@@ -724,18 +735,7 @@ ESBL gene
 </tr>
 <tr>
 <td style="text-align:left;">
-Plasmidic ESBL
-</td>
-<td style="text-align:right;">
-16
-</td>
-<td style="text-align:right;">
-0.5161290
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-ESBL plasmid
+ESCrE plasmid
 </td>
 <td style="text-align:right;">
 7
@@ -746,29 +746,29 @@ ESBL plasmid
 </tr>
 <tr>
 <td style="text-align:left;">
-Strain +/- ESBL
+Strain +/- ESCrE
 </td>
 <td style="text-align:right;">
-18
+20
 </td>
 <td style="text-align:right;">
-0.5806452
+0.6451613
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Strain +/- plasmidic ESBL
+Strain +/- plasmidic ESCrE
 </td>
 <td style="text-align:right;">
-18
+19
 </td>
 <td style="text-align:right;">
-0.5806452
+0.6129032
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Strain +/- ESBL plasmid
+Strain +/- ESCrE plasmid
 </td>
 <td style="text-align:right;">
 16
