--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.html
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-13" />
+<meta name="date" content="2025-06-30" />
 
 <title>Supplemental Table 1: Location of ESBL genes on short-read assemblies</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 1: Location of ESBL
 genes on short-read assemblies</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-13</h4>
+<h4 class="date">2025-06-30</h4>
 
 </div>
 
@@ -613,7 +613,7 @@ Sys.info()</code></pre>
                                                                                      effective_user 
                                                                                          &quot;kgontjes&quot; </code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>R version 4.5.0 (2025-04-11)
+<pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
 Running under: macOS Sequoia 15.5
 
@@ -636,30 +636,27 @@ other attached packages:
  [9] tibble_3.2.1     ggplot2_3.5.2    tidyverse_2.0.0  knitr_1.50      
 
 loaded via a namespace (and not attached):
- [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
+ [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.1     tidyselect_1.2.1  
  [5] xml2_1.3.8         jquerylib_0.1.4    systemfonts_1.2.2  scales_1.4.0      
  [9] yaml_2.3.10        fastmap_1.2.0      R6_2.6.1           generics_0.1.4    
 [13] svglite_2.1.3      bslib_0.9.0        pillar_1.10.2      RColorBrewer_1.1-3
 [17] tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0       stringi_1.8.7     
 [21] xfun_0.52          sass_0.4.10        viridisLite_0.4.2  timechange_0.3.0  
 [25] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
-[29] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+[29] grid_4.5.1         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
 [33] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
-[37] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
+[37] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
 </div>
 <div id="data" class="section level1">
 <h1>Data</h1>
-</div>
-<div id="esbl-gene-frequency-on-plasmids" class="section level1">
-<h1>ESBL gene frequency on plasmids</h1>
-<div id="used-the-following-families-ctx-oxa-tem-shv-per-veb-ges-tla-bes" class="section level2">
-<h2>Used the following families: CTX, OXA, TEM, SHV, PER, VEB, GES, TLA,
-BES</h2>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
 <thead>
 <tr>
 <th style="text-align:left;">
-ESBL
+ESCrE
+</th>
+<th style="text-align:left;">
+Category
 </th>
 <th style="text-align:right;">
 No. chromosomal
@@ -675,105 +672,61 @@ Proportion plasmidic
 <tbody>
 <tr>
 <td style="text-align:left;">
-blaSHV-1
+blaKPC-2
 </td>
-<td style="text-align:right;">
-4
+<td style="text-align:left;">
+Carbapenemase
 </td>
 <td style="text-align:right;">
 0
 </td>
 <td style="text-align:right;">
-0.00
+5
+</td>
+<td style="text-align:right;">
+100.00
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-blaSHV-11
+blaCMY-4
 </td>
-<td style="text-align:right;">
-1
+<td style="text-align:left;">
+ampC-like
 </td>
 <td style="text-align:right;">
 0
-</td>
-<td style="text-align:right;">
-0.00
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaSHV-187
 </td>
 <td style="text-align:right;">
 3
 </td>
 <td style="text-align:right;">
-0
-</td>
-<td style="text-align:right;">
-0.00
+100.00
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-blaSHV-28
+blaCTX-M-55
 </td>
-<td style="text-align:right;">
-3
+<td style="text-align:left;">
+ESBL
 </td>
 <td style="text-align:right;">
 0
-</td>
-<td style="text-align:right;">
-0.00
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:right;">
-26
-</td>
-<td style="text-align:right;">
-20
-</td>
-<td style="text-align:right;">
-43.48
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaCTX-M-27
-</td>
-<td style="text-align:right;">
-7
-</td>
-<td style="text-align:right;">
-14
-</td>
-<td style="text-align:right;">
-66.67
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaOXA-1
 </td>
 <td style="text-align:right;">
 2
 </td>
 <td style="text-align:right;">
-12
-</td>
-<td style="text-align:right;">
-85.71
+100.00
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
 blaCTX-M
+</td>
+<td style="text-align:left;">
+ESBL
 </td>
 <td style="text-align:right;">
 0
@@ -789,19 +742,8 @@ blaCTX-M
 <td style="text-align:left;">
 blaCTX-M-3
 </td>
-<td style="text-align:right;">
-0
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-100.00
-</td>
-</tr>
-<tr>
 <td style="text-align:left;">
-blaSHV
+ESBL
 </td>
 <td style="text-align:right;">
 0
@@ -817,19 +759,8 @@ blaSHV
 <td style="text-align:left;">
 blaSHV-12
 </td>
-<td style="text-align:right;">
-0
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-100.00
-</td>
-</tr>
-<tr>
 <td style="text-align:left;">
-blaTEM-214
+ESBL
 </td>
 <td style="text-align:right;">
 0
@@ -843,49 +774,210 @@ blaTEM-214
 </tr>
 <tr>
 <td style="text-align:left;">
-blaCTX-M-55
+blaKPC-3
+</td>
+<td style="text-align:left;">
+Carbapenemase
 </td>
 <td style="text-align:right;">
-0
+1
+</td>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+87.50
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCTX-M-27
+</td>
+<td style="text-align:left;">
+ESBL
+</td>
+<td style="text-align:right;">
+11
+</td>
+<td style="text-align:right;">
+21
+</td>
+<td style="text-align:right;">
+65.62
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-2
+</td>
+<td style="text-align:left;">
+ESBL
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+55.56
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+ESBL
+</td>
+<td style="text-align:right;">
+34
+</td>
+<td style="text-align:right;">
+32
+</td>
+<td style="text-align:right;">
+48.48
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+8
 </td>
 <td style="text-align:right;">
 2
 </td>
 <td style="text-align:right;">
-100.00
+20.00
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-blaTEM
+blaACT
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+5
 </td>
 <td style="text-align:right;">
 0
 </td>
 <td style="text-align:right;">
-2
-</td>
-<td style="text-align:right;">
-100.00
+0.00
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-blaTEM-1
+blaACT-115
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
 </td>
 <td style="text-align:right;">
 0
 </td>
 <td style="text-align:right;">
-36
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-17
+</td>
+<td style="text-align:left;">
+ampC-like
 </td>
 <td style="text-align:right;">
-100.00
+8
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-24
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaEC
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+88
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaEC-5
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+11
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaOXY-1-11
+</td>
+<td style="text-align:left;">
+ESBL
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
 </td>
 </tr>
 </tbody>
 </table>
-</div>
 </div>
 
 
