--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.html
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-06-30" />
+<meta name="date" content="2025-07-01" />
 
 <title>Supplemental Table 1: Location of ESBL genes on short-read assemblies</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 1: Location of ESBL
 genes on short-read assemblies</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-06-30</h4>
+<h4 class="date">2025-07-01</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                             version 
 &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
                                                                                            nodename 
-                                                                                   &quot;msla0572.local&quot; 
+                                                                    &quot;macbookpro.wifi.med.umich.edu&quot; 
                                                                                             machine 
                                                                                            &quot;x86_64&quot; 
                                                                                               login 
@@ -672,6 +672,23 @@ Proportion plasmidic
 <tbody>
 <tr>
 <td style="text-align:left;">
+blaCMY-4
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+100.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 blaKPC-2
 </td>
 <td style="text-align:left;">
@@ -681,7 +698,7 @@ Carbapenemase
 0
 </td>
 <td style="text-align:right;">
-5
+3
 </td>
 <td style="text-align:right;">
 100.00
@@ -689,10 +706,10 @@ Carbapenemase
 </tr>
 <tr>
 <td style="text-align:left;">
-blaCMY-4
+blaKPC-3
 </td>
 <td style="text-align:left;">
-ampC-like
+Carbapenemase
 </td>
 <td style="text-align:right;">
 0
@@ -723,7 +740,7 @@ ESBL
 </tr>
 <tr>
 <td style="text-align:left;">
-blaCTX-M
+blaCTX-M-3
 </td>
 <td style="text-align:left;">
 ESBL
@@ -740,7 +757,7 @@ ESBL
 </tr>
 <tr>
 <td style="text-align:left;">
-blaCTX-M-3
+blaCTX-M-55*
 </td>
 <td style="text-align:left;">
 ESBL
@@ -774,36 +791,36 @@ ESBL
 </tr>
 <tr>
 <td style="text-align:left;">
-blaKPC-3
-</td>
-<td style="text-align:left;">
-Carbapenemase
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-7
-</td>
-<td style="text-align:right;">
-87.50
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
 blaCTX-M-27
 </td>
 <td style="text-align:left;">
 ESBL
 </td>
 <td style="text-align:right;">
-11
+7
 </td>
 <td style="text-align:right;">
-21
+14
 </td>
 <td style="text-align:right;">
-65.62
+66.67
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+ESBL
+</td>
+<td style="text-align:right;">
+26
+</td>
+<td style="text-align:right;">
+20
+</td>
+<td style="text-align:right;">
+43.48
 </td>
 </tr>
 <tr>
@@ -817,61 +834,10 @@ ESBL
 4
 </td>
 <td style="text-align:right;">
-5
-</td>
-<td style="text-align:right;">
-55.56
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-ESBL
-</td>
-<td style="text-align:right;">
-34
-</td>
-<td style="text-align:right;">
-32
-</td>
-<td style="text-align:right;">
-48.48
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaCMY
-</td>
-<td style="text-align:left;">
-ampC-like
-</td>
-<td style="text-align:right;">
-8
-</td>
-<td style="text-align:right;">
 2
 </td>
 <td style="text-align:right;">
-20.00
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaACT
-</td>
-<td style="text-align:left;">
-ampC-like
-</td>
-<td style="text-align:right;">
-5
-</td>
-<td style="text-align:right;">
-0
-</td>
-<td style="text-align:right;">
-0.00
+33.33
 </td>
 </tr>
 <tr>
@@ -899,7 +865,7 @@ blaACT-17
 ampC-like
 </td>
 <td style="text-align:right;">
-8
+3
 </td>
 <td style="text-align:right;">
 0
@@ -916,7 +882,109 @@ blaACT-24
 ampC-like
 </td>
 <td style="text-align:right;">
-4
+3
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-75*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-13*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-190*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-25*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-65*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-67*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
 </td>
 <td style="text-align:right;">
 0
@@ -933,7 +1001,24 @@ blaEC
 ampC-like
 </td>
 <td style="text-align:right;">
-88
+3
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaEC-15*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+1
 </td>
 <td style="text-align:right;">
 0
@@ -950,7 +1035,41 @@ blaEC-5
 ampC-like
 </td>
 <td style="text-align:right;">
-11
+8
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaEC-5*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+39
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaEC-8*
+</td>
+<td style="text-align:left;">
+ampC-like
+</td>
+<td style="text-align:right;">
+17
 </td>
 <td style="text-align:right;">
 0
